--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "node-libs-browser": "^0.5.2",
     "numeral": "^1.5.3",
     "object-assign": "^2.0.0",
+    "urijs": "1.16.1",
     "react": "^0.13.3",
     "react-ace": "^2.0.0",
     "react-bootstrap-daterangepicker": "0.2.5",
