--- a/front/package.json
+++ b/front/package.json
@@ -7,27 +7,26 @@
   "main": "js/app.js",
   "dependencies": {
     "bootstrap": "3.3.4",
-    "brace": "^0.5.1",
+    "brace": "0.5.1",
     "express": "4.12.4",
-    "flux": "^2.0.3",
-    "joi": "^6.4.3",
+    "flux": "2.0.3",
+    "joi": "6.4.3",
     "jquery": "2.1.4",
-    "keymirror": "^0.1.1",
-    "lodash": "^3.9.3",
-    "moment": "^2.10.3",
-    "node-libs-browser": "^0.5.2",
-    "numeral": "^1.5.3",
-    "object-assign": "^2.0.0",
-    "urijs": "1.16.1",
-    "react": "^0.13.3",
-    "react-ace": "^2.0.0",
+    "keymirror": "0.1.1",
+    "lodash": "3.9.3",
+    "moment": "2.10.3",
+    "node-libs-browser": "0.5.2",
+    "numeral": "1.5.3",
+    "object-assign": "2.1.1",
+    "react": "0.13.3",
+    "react-ace": "2.0.0",
     "react-bootstrap-daterangepicker": "0.2.5",
     "react-highcharts": "0.0.9",
-    "react-notification-system": "^0.1.10",
-    "react-router": "^0.13.3",
-    "react-select": "^0.4.9",
-    "react-spinkit": "^1.1.2",
-    "react-validation-mixin": "^4.1.0"
+    "react-notification-system": "0.1.11",
+    "react-router": "0.13.3",
+    "react-select": "0.4.9",
+    "react-spinkit": "1.1.2",
+    "react-validation-mixin": "4.2.0"
   },
   "devDependencies": {
     "browser-sync": "^2.7.1",
